--- a/public/index.html
+++ b/public/index.html
@@ -144,8 +144,8 @@
     <div id="spinner" class="container">
       <!-- <img class="img" src="/my-app/src/img/maintext.png" alt="" /> -->
       <div class="logo-wrap">
-        <img class="img" src="logoRed.png" alt="" />
-        <img class="imgb" src="logoBlue.png" alt="" />
+        <img class="img" src="./logoRed.png" alt="" />
+        <img class="imgb" src="./logoblue.png" alt="" />
       </div>
     </div>
 
