fix: correct the image src directory

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
     <div id="spinner" class="container">
       <!-- <img class="img" src="/my-app/src/img/maintext.png" alt="" /> -->
       <div class="logo-wrap">
-        <img class="img" src="./logoRed.png" alt="" />
+        <img class="img" src="./logored.png" alt="" />
         <img class="imgb" src="./logoblue.png" alt="" />
       </div>
     </div>
